syntax = "proto3";

package engine;

service EngineService {
  rpc ProcessRequest (ProcessRequestMessage) returns (ProcessResponseMessage) {}
  rpc GetStatus (GetStatusRequest) returns (ProcessResponseMessage) {}
}

message ProcessRequestMessage {
  string id = 1;
  bytes data = 2;
  string timestamp = 3;
}

message GetStatusRequest {
  string id = 1;
}

message ProcessResponseMessage {
  string id = 1;
  string status = 2;
  bytes result = 3;
  string timestamp = 4;
  bool success = 5;
  string error = 6;
}
